# video-rag

./: .gitignore  pyproject.toml
ingest/: fetch.py  keyframes.py  schema.py  transcribe.py
notebooks/: 00_model_internals.ipynb  01_embeddings_by_hand.ipynb
tests/: test_schema.py
