[project]
name = "video-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.3.0",
    "protobuf>=7.35.1",
    "sentencepiece>=0.2.2",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2026.7.4",
]
